clusters/vollminlab-cluster/guacamole/guacamole/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole-ingress
  namespace: guacamole
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: guac.vollminlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guacamole-guacamole
                port:
                  number: 80
  tls:
    - hosts:
        - guac.vollminlab.com
      secretName: wildcard-tls
